# doppel

./: .coveragerc  .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  appveyor.yml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: build.yml
doppel/: __init__.py  archive.py  driver.py
test/: __init__.py
test/data/: sudo
test/integration/: test_archive.py  test_copy_change_dir.py  test_copy_into.py  test_copy_onto.py  test_copy_parents.py  test_errors.py  test_sudo.py
test/unit/: test_archive.py  test_copy.py  test_existing_parent.py  test_makedirs.py  test_remove.py  test_require_dirs.py
