[metadata]
license_file = LICENSE

[flake8]
extend-exclude = build,dist,deb_dist
ignore = E201,E202,F403,F405,W504
filename = *.py

[coverage:run]
source = doppel
parallel = True
branch = True

[coverage:paths]
source =
  doppel/
  /usr/local/lib/*/site-packages/doppel/

[coverage:report]
exclude_lines =
  pragma: no cover
  raise NotImplementedError
  return NotImplemented
  def __repr__
